# manifoldscore

./: .gitignore  README.md  pyproject.toml
experiments/: flat-torus.py  flat_torus.py  local.py  requirements.txt  sphere.py  utils.py
experiments/shapes/: flat_torus.py  pinched_torus.py  sphere.py  wedged_spheres.py
experiments/shapes/data/: Wedged_spheres_2D.txt
manifoldscore/: __init__.py  score.py  utilities.py
tests/: test_score.py  test_utilities.py
